src/objects/Term_and_Condition_Acceptance__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Term and Condition Acceptances</relationshipLabel>
        <relationshipName>Term_and_Condition_Acceptances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Accepted__c</fullName>
        <description>DEPRECATED, use Status and Status Date fields
Date when the related Term &amp; Condition has been accepted by the related Contact</description>
        <label>Date Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED, use Status and Status Date fields
Indicates if the related Term and Condition was accepted by the related Contact</description>
        <label>Is Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Superseded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the record has been superseded</description>
        <label>Is Superseded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Date of the last status change</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Term &amp; Condition record</description>
        <label>Term &amp; Condition</label>
        <referenceTo>Term_and_Condition__c</referenceTo>
        <relationshipLabel>Term and Condition Acceptances</relationshipLabel>
        <relationshipName>Term_and_Condition_Acceptances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term_and_Condition_Version_Number__c</fullName>
        <formula>Term_Condition__r.Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term and Condition Version Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Term and Condition Acceptance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Term_Condition__c</columns>
        <columns>Term_and_Condition_Version_Number__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Is_Superseded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Is_Accepted__c</columns>
        <columns>Status__c</columns>
        <columns>Term_Condition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Term_Condition__c</field>
            <operation>contains</operation>
            <value>ONE</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ONE_Source</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <columns>Term_Condition__c</columns>
        <columns>Term_and_Condition_Version_Number__c</columns>
        <columns>Is_Superseded__c</columns>
        <columns>Is_Accepted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Term_Condition__c</field>
            <operation>contains</operation>
            <value>ONE Source</value>
        </filters>
        <label>ONE Source</label>
    </listViews>
    <nameField>
        <displayFormat>TCA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term and Condition Acceptances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>